# bigdata-filrouge

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
airflow/dags/: velib_etl_dag.py
deploy/: deploy.sh
monitoring/grafana/provisioning/dashboards/: dashboards.yaml
monitoring/grafana/provisioning/dashboards/json/: velib-dashboard.json
monitoring/grafana/provisioning/datasources/: datasources.yaml
monitoring/promtail/: promtail-config.yml
sql/: init_schema.sql  insert_availability.sql  upsert_stations.sql
src/: __init__.py  getApi.py  traitement.py
tests/: conftest.py  test_dag_integrity.py  test_getApi.py  test_traitement.py
